split the notebook in two, updated the environment to include dependencies for seaborn and pandas

--- a/environment.yml
+++ b/environment.yml
@@ -8,6 +8,7 @@ dependencies:
     - imbalanced-learn
     - matplotlib
     - jupyter
+    - seaborn
     - scikit-learn
     - scikit-image
     - tqdm
